--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="icon" type="image/png" href="https://mickeyvanolst.com//images/favicon.png" />
 
 	<title>Mickey van Olst – Portfolio</title>
-
+	<!-- HELLO CESO! -->
 	<link rel="home" href="https://mickeyvanolst.com/" />
 	<link rel="stylesheet" href="https://mickeyvanolst.com/css/main.css">
 	<link rel="stylesheet" href="https://mickeyvanolst.com/css/vendor/superslides.css">
