--- a/impressum/index.html
+++ b/impressum/index.html
@@ -111,7 +111,7 @@
     <div class="col-inner-page">
         <h1>Impressum</h1>
         <div id="text">
-            <p>Angaben gem. § 5 TMG<br /><br /><strong>Betreiber und Kontakt:</strong><br />Mickey van Olst<br />Harzerstraße 6 <br />12059 Berlin<br /><br />Telefonnummer: +49 152 02198352<br />E-Mail-Adresse: post@mickeyvanolst.com</p>
+            <p>Angaben gem. § 5 TMG<br /><br /><strong>Betreiber und Kontakt:</strong><br />Mickey van Olst<br />Onckenstraße 18 <br />12059 Berlin<br /><br />Telefonnummer: +49 152 02198352<br />E-Mail-Adresse: post@mickeyvanolst.com</p>
 <p>Bei regelmässiger Beauftragung von freien Künstlern und Publizisten werden Abgaben an die Künstler-Sozialkasse (KSK) fällig, unabhängig davon, ob diese in der KSK pflichtversichert sind. Ich empfehle diesbezüglich Ihren Steuerberater zu konsultieren.<br /></p>
 <p><br />Datenschutzerklärung </p>
 <p><strong>1. Datenschutz auf einen Blick</strong></p>
