--- a/projects/responsive-sounds-images/index.html
+++ b/projects/responsive-sounds-images/index.html
@@ -23,7 +23,7 @@
 	
   <link rel="icon" type="image/png" href="https://mickeyvanolst.com//images/favicon.png" />
 
-	<title>Mickey van Olst (en-US) – Responsive Sounds &amp; Images</title>
+	<title>Mickey van Olst – Responsive Sounds &amp; Images</title>
 
 	<link rel="home" href="https://mickeyvanolst.com/" />
 	<link rel="stylesheet" href="https://mickeyvanolst.com/css/main.css">
