--- a/projects/850/index.html
+++ b/projects/850/index.html
@@ -110,12 +110,12 @@
 				<div id="project-page" class="col-outer">
     <article>
                         <figure>
-        <div class='embed-container'>
+        <!-- <div class='embed-container'>
             <iframe src="https://player.vimeo.com/video/297736188?color=ffffff&title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>
+        </div> -->
 		<div class="video-wrapper">
 			<div class="video-container" id="video-container">
-				<video controls id="video" preload="metadata" poster="/images/projects/11001_b.jpg">
+				<video controls id="video" preload="metadata" poster="/images/projects/850_video_thumbnail.avif">
 					<source src="http://staging.mickeyvanolst.com/vimeo_backup/fireflies%20(Original).mp4" type="video/mp4">
 				</video>
 			</div>
