about half the project updated with self-hosted video

--- a/projects/dune/index.html
+++ b/projects/dune/index.html
@@ -109,10 +109,17 @@
 			<main id="content" role="main">
 				<div id="project-page" class="col-outer">
     <article>
-                        <figure>
+                        <!-- <figure>
         <div class='embed-container'>
             <iframe src="https://player.vimeo.com/video/274494520?color=ffffff&title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>
+        </div> -->
+        <div class="video-wrapper">
+          <div class="video-container" id="video-container">
+            <video controls id="video" preload="metadata" poster="/images/projects/dune_thumbnail.avif.avif">
+              <source src="http://staging.mickeyvanolst.com/vimeo_backup/dune_reworked_110618%20(Original).mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>        
                 </figure>
         
                 <div class="col-outer">
