--- a/projects/narciss/index.html
+++ b/projects/narciss/index.html
@@ -110,9 +110,16 @@
 				<div id="project-page" class="col-outer">
     <article>
                         <figure>
-        <div class='embed-container'>
+        <!-- <div class='embed-container'>
             <iframe src="https://player.vimeo.com/video/278682601?color=ffffff&title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>
+        </div> -->
+        <div class="video-wrapper">
+            <div class="video-container" id="video-container">
+              <video controls id="video" preload="metadata" poster="/images/projects/narciss_thumbnail.avif">
+              <source src="http://staging.mickeyvanolst.com/vimeo_backup/narciss%20(Original)%20(1).mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
                 </figure>
         
                 <div class="col-outer">
@@ -127,9 +134,16 @@
 		            <img src="/images/projects/Full_HD_4.jpg" width="1920" height="1080" alt=""/>
 		            </figure>
                                         <figure>
-            <div class='embed-container'>
+            <!-- <div class='embed-container'>
                 <iframe src="https://player.vimeo.com/video/279116646?color=ffffff&title=0&byline=0&portrait=0&background=1&autoplay=1" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
+            </div> -->
+            <div class="video-wrapper">
+                <div class="video-container" id="video-container">
+                  <video playsinline muted loop autoplay id="video" preload="metadata" poster="/images/projects/narciss_snippet_thumbnail.avif">
+                  <source src="http://staging.mickeyvanolst.com/vimeo_backup/narciss_camera_snippet%20(Original)%20(1).mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
                     </figure>
                                         <figure>
 		            <img src="/images/projects/Full_HD_0015_Ebene-7.jpg" width="1920" height="1080" alt=""/>
