--- a/projects/genesis/index.html
+++ b/projects/genesis/index.html
@@ -110,9 +110,16 @@
 				<div id="project-page" class="col-outer">
     <article>
                         <figure>
-        <div class='embed-container'>
+        <!-- <div class='embed-container'>
             <iframe src="https://player.vimeo.com/video/234873953?color=ffffff&title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>
+        </div> -->
+		<div class="video-wrapper">
+            <div class="video-container" id="video-container">
+              <video controls id="video" preload="metadata" poster="/images/projects/genesis_thumbnail.avif">
+              <source src="http://staging.mickeyvanolst.com/vimeo_backup/genesis,_dynamic_branding%20(Original).mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
                 </figure>
         
                 <div class="col-outer">
