--- a/projects/narciss/index.html
+++ b/projects/narciss/index.html
@@ -140,7 +140,7 @@
             <div class="video-wrapper">
                 <div class="video-container" id="video-container">
                   <video playsinline muted loop autoplay id="video" preload="metadata" poster="/images/projects/narciss_snippet_thumbnail.avif">
-                  <source src="http://staging.mickeyvanolst.com/vimeo_backup/narciss_camera_snippet%20(Original)%20(1).mp4" type="video/mp4">
+                  <source src="http://staging.mickeyvanolst.com/vimeo_backup/narciss_camera_snippet%20(Original).mp4" type="video/mp4">
                   </video>
                 </div>
               </div>
