all the remaining ones

--- a/projects/true-false/index.html
+++ b/projects/true-false/index.html
@@ -110,9 +110,16 @@
 				<div id="project-page" class="col-outer">
     <article>
                         <figure>
-        <div class='embed-container'>
+        <!-- <div class='embed-container'>
             <iframe src="https://player.vimeo.com/video/234863102?color=ffffff&title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>
+        </div> -->
+        <div class="video-wrapper">
+            <div class="video-container" id="video-container">
+              <video controls id="video" preload="metadata" poster="/images/projects/true_false_thumbnail.avif">
+              <source src="http://staging.mickeyvanolst.com/vimeo_backup/true_false_-_kinetic_light_installation%20(Original).mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
                 </figure>
         
                 <div class="col-outer">
@@ -127,9 +134,16 @@
 		            <img src="/images/projects/truefalse_04.jpg" width="1280" height="720" alt=""/>
 		            </figure>
                                         <figure>
-            <div class='embed-container'>
+            <!-- <div class='embed-container'>
                 <iframe src="https://player.vimeo.com/video/249376242?color=ffffff&title=0&byline=0&portrait=0&background=1&autoplay=1" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
+            </div> -->
+            <div class="video-wrapper">
+                <div class="video-container" id="video-container">
+                  <video playsinline muted loop autoplay id="video" preload="metadata" poster="/images/projects/true_false_snippet_1_thumbnail.avif">
+                  <source src="http://staging.mickeyvanolst.com/vimeo_backup/truefalse_rotating_closeup%20(Original).mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
                     </figure>
                                         <figure>
 		            <img src="/images/projects/truefalse_trio_03.png" width="1280" height="560" alt=""/>
@@ -144,9 +158,16 @@
 		            <img src="/images/projects/truefalse_electronic03.jpg" width="1600" height="1068" alt=""/>
 		            </figure>
                                         <figure>
-            <div class='embed-container'>
+            <!-- <div class='embed-container'>
                 <iframe src="https://player.vimeo.com/video/249376791?color=ffffff&title=0&byline=0&portrait=0&background=1&autoplay=1" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
+            </div> -->
+            <div class="video-wrapper">
+                <div class="video-container" id="video-container">
+                  <video playsinline muted loop autoplay id="video" preload="metadata" poster="/images/projects/true_false_snippet_2_thumbnail.avif">
+                  <source src="http://staging.mickeyvanolst.com/vimeo_backup/171020_truefalse_closeup_loop%20(Original).mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
                     </figure>
                                         <figure>
 		            <img src="/images/projects/truefalse_05.jpg" width="1280" height="720" alt=""/>
