--- a/projects/notch/index.html
+++ b/projects/notch/index.html
@@ -110,9 +110,16 @@
 				<div id="project-page" class="col-outer">
     <article>
                         <figure>
-        <div class='embed-container'>
+        <!-- <div class='embed-container'>
             <iframe src="https://player.vimeo.com/video/314978257?color=ffffff&title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>
+        </div> -->
+		<div class="video-wrapper">
+            <div class="video-container" id="video-container">
+              <video controls id="video" preload="metadata" poster="/images/projects/notch_thumbnail.avif">
+              <source src="http://staging.mickeyvanolst.com/vimeo_backup/notch%20(Original).mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
                 </figure>
         
                 <div class="col-outer">
@@ -133,9 +140,16 @@
 		            <img src="/images/projects/MASTER-REEL-Round2.00_50_00_05.jpg" width="1920" height="1080" alt=""/>
 		            </figure>
                                         <figure>
-            <div class='embed-container'>
+            <!-- <div class='embed-container'>
                 <iframe src="https://player.vimeo.com/video/282315732?color=ffffff&title=0&byline=0&portrait=0&background=1&autoplay=1" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
+            </div> -->
+			<div class="video-wrapper">
+                <div class="video-container" id="video-container">
+                  <video playsinline muted loop autoplay id="video" preload="metadata" poster="/images/projects/notch_snippet_thumbnail.avif">
+                  <source src="http://staging.mickeyvanolst.com/vimeo_backup/looping_notch_1%20(Original).mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
                     </figure>
                                         <figure>
 		            <img src="/images/projects/markus-installation-full-view-test.jpg" width="3840" height="2160" alt=""/>
