--- a/projects/porsche-blackbox/index.html
+++ b/projects/porsche-blackbox/index.html
@@ -110,9 +110,16 @@
 				<div id="project-page" class="col-outer">
     <article>
                         <figure>
-        <div class='embed-container'>
+        <!-- <div class='embed-container'>
             <iframe src="https://player.vimeo.com/video/234857248?color=ffffff&title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>
+        </div> -->
+        <div class="video-wrapper">
+            <div class="video-container" id="video-container">
+              <video controls id="video" preload="metadata" poster="/images/projects/porsche_blackbox_thumbnail.avif">
+              <source src="http://staging.mickeyvanolst.com/vimeo_backup/porsche_blackbox_-_webgl_experience%20(Original).mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
                 </figure>
         
                 <div class="col-outer">
@@ -135,9 +142,16 @@
 		            <img src="/images/projects/porsche_blackbox_01.jpg" width="1280" height="720" alt=""/>
 		            </figure>
                                         <figure>
-            <div class='embed-container'>
+            <!-- <div class='embed-container'>
                 <iframe src="https://player.vimeo.com/video/234858448?color=ffffff&title=0&byline=0&portrait=0&background=1&autoplay=1" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
+            </div> -->
+            <div class="video-wrapper">
+                <div class="video-container" id="video-container">
+                  <video playsinline muted loop autoplay id="video" preload="metadata" poster="/images/projects/porsche_blackbox_snippet_thumbnail.avif">
+                  <source src="http://staging.mickeyvanolst.com/vimeo_backup/porsche_blackbox_-_bullet_time_-_time_freeze%20(Original).mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
                     </figure>
                 
                 <div id="credits" class="col-outer">
