--- a/projects/responsive-sounds-images/index.html
+++ b/projects/responsive-sounds-images/index.html
@@ -110,8 +110,15 @@
 				<div id="project-page" class="col-outer">
     <article>
                         <figure>
-        <div class='embed-container'>
+        <!-- <div class='embed-container'>
             <iframe src="https://player.vimeo.com/video/75703243?color=ffffff&title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div> -->
+        <div class="video-wrapper">
+          <div class="video-container" id="video-container">
+            <video controls id="video" preload="metadata" poster="/images/projects/responsive_sounds_images_thumbnail.avif">
+            <source src="http://staging.mickeyvanolst.com/vimeo_backup/responsive_sounds_&_images%20(1080p).mp4" type="video/mp4">
+            </video>
+          </div>
         </div>
                 </figure>
         
