--- a/projects/zephyr/index.html
+++ b/projects/zephyr/index.html
@@ -123,9 +123,16 @@
         </div>
 
                         <figure>
-            <div class='embed-container'>
+            <!-- <div class='embed-container'>
                 <iframe src="https://player.vimeo.com/video/249381020?color=ffffff&title=0&byline=0&portrait=0&background=1&autoplay=1" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
+            </div> -->
+            <div class="video-wrapper">
+                <div class="video-container" id="video-container">
+                  <video playsinline muted loop autoplay id="video" preload="metadata" poster="/images/projects/zephyr_snippet_1_thumbnail.avif">
+                  <source src="http://staging.mickeyvanolst.com/vimeo_backup/zephyr_cloud%20(Original).mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
                     </figure>
                                         <figure>
 		            <img src="/images/projects/George-Singer-modern-chandeliers-and-lighting-installations-Zephyr-photo-3-www.georgesinger.co_.uk.jpg" width="1400" height="765" alt=""/>
@@ -134,17 +141,31 @@
 		            <img src="/images/projects/George-Singer-modern-chandeliers-and-lighting-installations-Zephyr-photo-2-www.georgesinger.co_.uk.jpg" width="1390" height="900" alt=""/>
 		            </figure>
                                         <figure>
-            <div class='embed-container'>
+            <!-- <div class='embed-container'>
                 <iframe src="https://player.vimeo.com/video/249381052?color=ffffff&title=0&byline=0&portrait=0&background=1&autoplay=1" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
+            </div> -->
+            <div class="video-wrapper">
+                <div class="video-container" id="video-container">
+                  <video playsinline muted loop autoplay id="video" preload="metadata" poster="/images/projects/zephyr_snippet_2_thumbnail.avif">
+                  <source src="http://staging.mickeyvanolst.com/vimeo_backup/tool%20(Original).mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
                     </figure>
                                         <figure>
 		            <img src="/images/projects/George-Singer-modern-chandeliers-and-lighting-installations-Zephyr-photo-6-www.georgesinger.co_.uk.jpg" width="1350" height="900" alt=""/>
 		            </figure>
                                         <figure>
-            <div class='embed-container'>
+            <!-- <div class='embed-container'>
                 <iframe src="https://player.vimeo.com/video/234494459?color=ffffff&title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
+            </div> -->
+            <div class="video-wrapper">
+                <div class="video-container" id="video-container">
+                  <video controls id="video" preload="metadata" poster="/images/projects/zephyr_thumbnail.avif">
+                  <source src="http://staging.mickeyvanolst.com/vimeo_backup/zephyr,_generative_chandelier%20(Original).mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
                     </figure>
                 
                 <div id="credits" class="col-outer">
