--- a/projects/dune/index.html
+++ b/projects/dune/index.html
@@ -115,7 +115,7 @@
         </div> -->
         <div class="video-wrapper">
           <div class="video-container" id="video-container">
-            <video controls id="video" preload="metadata" poster="/images/projects/dune_thumbnail.avif.avif">
+            <video controls id="video" preload="metadata" poster="/images/projects/dune_thumbnail.avif">
               <source src="http://staging.mickeyvanolst.com/vimeo_backup/dune_reworked_110618%20(Original).mp4" type="video/mp4">
             </video>
           </div>
