--- a/projects/850/index.html
+++ b/projects/850/index.html
@@ -116,7 +116,7 @@
 		<div class="video-wrapper">
 			<div class="video-container" id="video-container">
 				<video controls id="video" preload="metadata" poster="/images/projects/850_video_thumbnail.avif">
-					<source src="http://staging.mickeyvanolst.com/vimeo_backup/fireflies%20(Original).mp4" type="video/mp4">
+					<source src="http://staging.mickeyvanolst.com/vimeo_backup/g-15%20(Original).mp4" type="video/mp4">
 				</video>
 			</div>
 		</div>
