--- a/projects/seeker/index.html
+++ b/projects/seeker/index.html
@@ -116,7 +116,7 @@
 		<div class="video-wrapper">
 			<div class="video-container" id="video-container">
 			  <video controls id="video" preload="metadata" poster="/images/projects/seeker_thumbnail.avif">
-			  <source src="http://staging.mickeyvanolst.com/vimeo_backup/seeker%20(1080p).mp4" type="video/mp4">
+			  <source src="http://staging.mickeyvanolst.com/vimeo_backup/seeker%20(Original).mp4" type="video/mp4">
 			  </video>
 			</div>
 		  </div>
